--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
   /* prevent logo from stretching */
   object-fit: contain;
   background-color: #fff;
-  padding: 2vh;
+  padding: 1.5vh;
   border: 1px solid #dbdbdb;
+  margin-bottom: 3vh;
 }
