--- a/src/App.css
+++ b/src/App.css
@@ -38,4 +38,15 @@
   font-size: 14px !important;
 }
 
-/* End of over-rides */
+.LogInForm__form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
