--- a/src/Post.css
+++ b/src/Post.css
@@ -2,7 +2,7 @@
   color: #404040;
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
-  max-width: 700px;
+  max-width: 40vw;
   border: 1px solid #dbdbdb;
   background-color: #ffffff;
   margin: auto;
@@ -40,4 +40,17 @@ h4 {
 .post__icons {
   padding: 0.5vw 0.7vw;
   font-size: 14px;
+}
+
+.Post__commentBox {
+  width: 100%;
+  height: 5vh;
+  min-height: 50px;
+  border: none;
+  border-top: 1px solid #dbdbdb;
+  padding-right: 1vw;
+}
+
+input[type="text"] {
+  padding-left: 10px;
 }
