--- a/src/Post.css
+++ b/src/Post.css
@@ -42,15 +42,26 @@ h4 {
   font-size: 14px;
 }
 
-.Post__commentBox {
-  width: 100%;
-  height: 5vh;
-  min-height: 50px;
-  border: none;
-  border-top: 1px solid #dbdbdb;
-  padding-right: 1vw;
-}
-
 input[type="text"] {
   padding-left: 10px;
+}
+
+.Post_commentBox {
+  display: flex;
+  margin-top: 1vh;
+}
+
+.Post__input {
+  flex: 1;
+  border: none;
+  padding: 10px;
+  border-top: 1px solid #dbdbdb;
+}
+
+Post__button {
+  flex: 0;
+}
+
+.Post_commentBox .MuiButton-root {
+  color: #0095f6 !important;
 }
